--- a/jpa/src/main/resources/templates/posts-save.html
+++ b/jpa/src/main/resources/templates/posts-save.html
@@ -15,12 +15,12 @@
 			       id="title" placeholder="제목을 입력하세요">
 		</div>
 		<div class="form-group">
-			<label for="author">제목</label>
+			<label for="author">작성자</label>
 			<input type="text" class="form-contrl" 
 			       id="author" placeholder="작성자를 입력하세요">
 		</div>
 		<div class="form-group">
-			<label for="content">제목</label>
+			<label for="content">내용</label>
 			<textarea class="form-contrl" 
 			       id="content" placeholder="내용을 입력하세요"></textarea>
 		</div>
