--- a/ex09jpa/src/main/resources/templates/posts-update.html
+++ b/ex09jpa/src/main/resources/templates/posts-update.html
@@ -27,4 +27,4 @@
         <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
     </div>
 </div>
-<th:block th:replace="~{footer :: footer}" />
+<th:block th:replace="~{layout/footer :: footer}" />
