--- a/ex09jpa/src/main/resources/templates/layout/footer.html
+++ b/ex09jpa/src/main/resources/templates/layout/footer.html
@@ -1,6 +1,6 @@
 <th:block th:fragment="footer">
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-<script src="/js/index.js"></script>
+<script src="/js/post.js"></script>
 </body>
 </html>
 </th:block>
