--- a/ex03controller/src/main/resources/templates/member.html
+++ b/ex03controller/src/main/resources/templates/member.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+	crossorigin="anonymous">
+<style>
+	.error { color:red;}
+</style>	
 </head>
 <body>
 
+	<div class="container">
+ 		<form action="#" th:action="@{/member}" th:object="${member}" method="post">
+            <table class="table">
+                <tr>
+                    <td>Name:</td>
+                    <td><input type="text" th:field="*{name}" /></td>
+                    <td class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td><input type="text" th:field="*{email}" /></td>
+                    <td class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</td>
+                </tr>                
+                <tr>
+                    <td>Age:</td>
+                    <td><input type="text" th:field="*{age}" /></td>
+                    <td class="text-danger" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age Error</td>
+                </tr>
+                <tr>
+                    <td>Working:</td>
+                    <td><input type="checkbox" th:field="*{working}" value="true"/></td>
+                    <td class="text-danger" th:if="${#fields.hasErrors('working')}" th:errors="*{working}">Woking Error</td>
+                </tr>
+                <tr>
+                    <td>Phone:</td>
+                    <td><input type="text" th:field="*{Phone}" /></td>
+                    <td class="text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">Phone Error</td>
+                </tr>
+                <tr>
+                    <td>WorkingDuration:</td>
+                    <td><input type="date" th:field="*{startdate}" /><input type="date" th:field="*{enddate}" /></td>
+                	<td class="text-danger" th:if="${#fields.hasErrors('endDateAfterStartDate')}" th:errors="*{endDateAfterStartDate}">endDateAfterStartDate Error</td>
+                </tr>
+                <tr>
+                    <td><button type="submit">Submit</button></td>
+                </tr>
+            </table>
+        </form>
+	</div>
 </body>
 </html>
